# nova-ai

./: .gitignore  README.md  main.py
arch/: rrdb.py  vsr_backbone.py
arch/ops/: dcn.py
engine/: pipeline.py  texture_recovery.py  tiling.py  trt.py
kernels/: Nova_DCNv2.cu  Nova_Preprocess.cu  nova_bridge.cpp  nova_dcnv2_api.h
models/: build_trt.py  export_onnx.py
tests/: parity_test.py  test_engine.py  test_kernels.py  test_pipeline_flow.py  test_texture.py
trt_plugins/: CMakeLists.txt  build.bat  nova_dcnv2_plugin.cpp  nova_dcnv2_plugin.h  nova_dcnv2_plugin_creator.cpp  nova_mean_k_kernel.cu  onnx_plugin_resolver.cpp
trt_plugins/cmake/: FindTensorRT.cmake
trt_plugins/python/: register_nova_plugin.py
utils/: checkpoint.py  config.py  cuda_loader.py  gpu_telemetry.py  logger.py  videocapture.py
